tests/checker/ok/commutative_non_canonical_receiver.can
Greeted = Greeting

Greeting = String

Name = String

Greeting * Name => Greeted {
    Greeting
}

Unit => Program {
    Name("world") -> Greeted(Greeting("hello"))
    "ok" -> Print
}
