tests/checker/fail/scalar_newtype_wrong_primitive.can
Greeting = String

Unit => Program {
    1
        -> Greeting
        -> Print
}
